# programming-language-interpreter

./: .gitignore  CMakeLists.txt  README.md  coverage.sh  program.txt  program_testowy.cccp  test_program.plint
.github/workflows/: testing.yml
docs/: README.md
docs/language_specification/: lexicon.txt  syntax.txt
examples/: social_media_splash.plint
include/: CharType.hpp  CommentFilterLexer.hpp  Expressions.fwd.hpp  Expressions.hpp  FunctionDefinition.hpp  IExpression.hpp  IInstruction.hpp  ILexer.hpp  ISelfPrintable.hpp  IVisitable.hpp  IVisitor.hpp  Instructions.fwd.hpp  Instructions.hpp  Interpreter.hpp  Lexer.hpp  MatchLine.hpp  NumericType.hpp  ParameterDefinition.hpp  Parser.hpp  Position.hpp  Program.hpp  ProgramTreePrinter.hpp  Token.hpp  Type.hpp  TypeIdentifier.hpp  ValueType.hpp  Variable.hpp  light_map.hpp  overload.hpp
include/fwd/: Expressions.fwd.hpp  FunctionDefinition.fwd.hpp  IExpression.fwd.hpp  IInstruction.fwd.hpp  IVisitable.fwd.hpp  IVisitor.fwd.hpp
src/: main.cpp
src/lib/: Expressions.cpp  Interpreter.cpp  Lexer.cpp  Parser.cpp  ProgramTreePrinter.cpp  TypeIdentifier.cpp
test/: tests.cpp
